modifed readme